# job-tracker

./: .gitignore  README.md
final/: main.cpp
j-b-pythonista/: TUI.py  database_logic.py  main.py  services.py
j-b-pythonista/functions/: pay.py
j-b-pythonista/help_info/: attributes.csv  calc_fields.csv  input_fields.csv  manifesto.txt
j-b-pythonista/old/: TUI.py  database_logic.py  main.py
j-b-pythonista/pages/: menu.py
j-b_tracker/: long_decimal.cc  long_decimal.hxx  main.cpp  window_settings.cc  window_settings.hxx
python old/: app.py  main.py
python old/data/: Old Job Application Tracker.xlsx
webgpu test/: CMakeLists.txt
webgpu-test/: CMakeLists.txt  main.cpp
